@@ -1,3 +1,5 @@
+- Improvement: Added edit method to ExtraCurricularActivity 
+
 32.8.5 (16-04-2021)
 - Refactor: Country deprecated methods cleanup
 - Improvement: fixing labels
